# src/routes/auth.route.js
@@ -1,4 +1,8 @@
 import express from 'express';
+import passport from 'passport';
+import '../config/passport.config';
+import '../services/passport/passport-google.service';
+
 import authController from '../controllers/auth.controller';
 import authentication from '../middlewares/authenticate.middleware';
 import catchAsync from '../middlewares/catchAsync.middleware';
@@ -9,6 +13,7 @@ const {
   logout,
   recoverPassword,
   resetPassword,
+  socialAuth,
   protectedRoute,
 } = authController;
 
@@ -22,5 +27,25 @@ router.post('/logout', catchAsync(logout));
 router.post('/recover-password', catchAsync(recoverPassword));
 router.post('/reset-password', catchAsync(resetPassword));
 router.get('/protected-route-test', authenticate, catchAsync(protectedRoute));
+
+/**
+ * Social Authentication: Google
+ */
+router.get(
+  '/google',
+  passport.authenticate('google', {
+    session: false,
+    scope: ['profile', 'email'],
+  }),
+);
+// callback route for google authentication
+router.get(
+  '/google/callback',
+  passport.authenticate('google', {
+    session: false,
+    scope: ['profile', 'email'],
+  }),
+  socialAuth,
+);
 
 export default router;
